# launcher-old

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  config.json  profile.json  public_key
.github/workflows/: build.yml  clippy_check.yml
extensions-api/: Cargo.toml
extensions-api/src/: channel.rs  command.rs  connection.rs  launcher.rs  lib.rs
launcher/: .gitignore  Cargo.toml  build.rs  config.json
launcher/src/: client.rs  config.rs  game.rs  main.rs  runtime.rs  security.rs
launcher/src/client/: downloader.rs
launcher/src/game/: auth.rs  profile.rs
launcher/src/runtime/: arg.rs  messages.rs  rpc.rs  webview.rs
launcher/src/runtime/messages/: event.rs  launcher.rs  library.rs  storage.rs  system.rs  window.rs
launcher/src/security/: validation.rs  watcher.rs
launcherapi/: Cargo.toml
launcherapi/src/: bundle.rs  config.rs  lib.rs  message.rs  optional.rs  profile.rs  validation.rs
launchserver/: .gitignore  Cargo.toml
launchserver/src/: auth.rs  bundle.rs  commands.rs  config.rs  extensions.rs  hash.rs  logger.rs  main.rs  profile.rs  security.rs  server.rs  util.rs
launchserver/src/auth/: accept.rs  json.rs  sql.rs
launchserver/src/config/: auth.rs  texture.rs
launchserver/src/config/auth/: json.rs  sql.rs
launchserver/src/hash/: arch.rs  resources.rs
launchserver/src/server/: auth.rs  http.rs  profile.rs  websocket.rs
launchserver/src/util/: fs.rs
runtime/: index.html  main.glade  minimal.htm  style.css
src/: client.rs  commands.rs  config.rs  encryption.rs  game.rs  lib.rs  main.rs  message.rs  profile.rs  runtime.rs  security.rs  server.rs  validation.rs  websocket.rs
src/client/: downloader.rs
src/config/: auth.rs  texture.rs
src/game/: profile.rs
src/runtime/: messages.rs
src/security/: validation.rs
src/server/: auth.rs  message.rs  profile.rs  websocket.rs
src/websocket/: message.rs  mod.rs
utils-macro/: Cargo.toml
utils-macro/src/: args.rs  lib.rs
