[package]
name = "launch_server"
version = "0.1.0"
authors = ["Jeb", "Belz"]
edition = "2018"


[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.12.1"
uuid = { version = "0.8.1", features = ["serde"] }
futures = "0.3"
warp = "0.2.3"
tokio = { version = "*", features = ["full"]}
async-trait = "0.1.24"
rand="0.7.3"
reqwest = {version = "0.10.6", features = ["json"]}
env_logger = "0.7.1"
log = "0.4.8"
strfmt = "0.1.6"
md5 = "0.7.0"
launcher_api = {git = "https://gitlab.com/nsl_team/launcherapi"}
rustyline = "6.0.0"
rustyline-derive = "=0.3.0"
walkdir = "2"
ecies-ed25519 = "0.3"
t1ha = "0.1.0"

[profile.release]
lto = true
opt-level = 'z'