[package]
name = "launcher_extension_api"
version = "0.1.0"
authors = ["RussianJeb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["sync"] }
launcher_api = { path = "../launcherapi" }
uuid = { version = "0.8", features = ["v4"] }