[package]
name = "nslauncher"
version = "0.0.1"
authors = ["Belz", "Jeb"]
edition = "2018"
build = "build.rs"

[dependencies]
dlopen = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
path-slash = "0.1.1"
dirs = "2.0"
env_logger = "0.7.1"
rand = "0.7.3"
base64 = "0.12.1"
rust-embed="5.5.1"
yarws = "0.3"
ecies-ed25519 = "0.3"
hyper = "0.13.6"
hyper-tls = "0.4.1"
futures = "0.3"
anyhow = "1.0.31"
notify = "5.0.0-pre.2"
once_cell = "1.5"
uuid = "0.8"
log = "0.4"
bincode = "1.3"
nfd2 = "0.2"
t1ha = "0.1.0"
sysinfo = "0.15"
obfstr = "0.2"
lazy-static-include = "3.0.5"

[dependencies.web-view]
git = "https://github.com/team-ns/web-view"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.launcher_api]
path = "../launcherapi"

[dependencies.jni]
git = "https://github.com/team-ns/jni-rs"
branch = "dynamic"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winnt"]

[target.'cfg(target_os = "linux")'.dependencies]
uname = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'