[package]
name = "nslauncher"
version = "0.0.1"
authors = ["Belz", "Jeb"]
edition = "2018"
build = "build.rs"

[features]
bundle = []
default = []

[dependencies]
dlopen = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
walkdir = "2"
path-slash = "0.1.1"
dirs = "2.0"
env_logger = "0.7.1"
rand = "0.7.3"
base64 = "0.12.1"
yarws = { git = "https://github.com/team-ns/yarws" }
ecies-ed25519 = "0.5"
hyper = { version = "0.14", features = ["client", "http2", "http1"] }
hyper-tls = "0.5"
futures = "0.3"
anyhow = "1.0.31"
minreq = { version = "2.3", features = ["https-native"] }
notify = "5.0.0-pre.13"
once_cell = "1.5"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
bincode = "1.3"
native-dialog = "0.5.5"
t1ha = "0.1.0"
sys-info = "0.9"
wry = "0.12"
include-crypt = "0.1"
mime_guess = "2.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.launcher_api]
path = "../launcherapi"

[dependencies.jni]
git = "https://github.com/team-ns/jni-rs"
branch = "dynamic"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "shellapi"] }
temp-dir = "0.1"
winreg = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
uname = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'