[package]
name = "launcher_api"
version = "0.1.0"
authors = ["Jeb", "Belz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
t1ha = "0.1.0"
anyhow = "1.0.31"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["serde"]