[package]
name = "nslaunchserver"
version = "0.0.1"
authors = ["Jeb", "Belz"]
edition = "2018"


[dependencies]
serde_json = "1.0"
base64 = "0.12.1"
futures = "0.3"
warp = "0.2"
async-trait = "0.1"
rand = "0.7.3"
env_logger = "0.7.1"
log = "0.4.8"
strfmt = "0.1.6"
md5 = "0.7.0"
rustyline = "6.3"
rustyline-derive = "0.3"
walkdir = "2"
ecies-ed25519 = "0.3"
t1ha = "0.1.0"
byteorder = "1.3"
anyhow = "1.0"
log4rs = "0.13"
path-slash = "0.1.1"


[dependencies.launcher_api]
path = "../launcherapi"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["serde"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.rust-embed]
version = "5.6"
features = ["interpolate-folder-path"]

[profile.release]
lto = true
opt-level = 'z'