[package]
name = "nslaunchserver"
version = "0.0.1"
authors = ["Jeb", "Belz"]
edition = "2018"

[dependencies]
serde_json = "1.0"
base64 = "0.13"
futures = "0.3"
async-trait = "0.1"
rand = "0.7"
log = "0.4"
strfmt = "0.1"
md5 = "0.7"
rustyline = "8.0"
rustyline-derive = "0.4"
walkdir = "2"
ecies-ed25519 = "0.5"
t1ha = "0.1"
byteorder = "1.3"
anyhow = "1.0"
log4rs = "1.0"
path-slash = "0.1"
ntex = "0.3"
ntex-files = { git = "https://github.com/team-ns/ntex-extras" }
teloc = { git = "https://github.com/team-ns/teloc" }
bincode = "1.3"
dlopen = "0.1"

[dependencies.launcher_api]
path = "../launcherapi"

[dependencies.launcher_extension_api]
path = "../extensions-api"

[dependencies.launcher_macro]
path = "../utils-macro"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.rust-embed]
version = "5.9"
features = ["interpolate-folder-path"]

[dependencies.multi-map]
git = "https://github.com/team-ns/multi-map"

[dependencies.sqlx]
git = "https://github.com/team-ns/sqlx"
version = "0.4"
features = ["runtime-tokio-rustls", "any", "postgres", "mysql", "uuid"]